{
    "name": "MinigameControls",
    "maps": [
        {
            "name": "Player",
            "id": "063424b3-6f6e-40b9-9d3a-04aff91698dd",
            "actions": [
                {
                    "name": "TouchPoint",
                    "type": "Value",
                    "id": "10b67753-a235-4a81-b5b8-d4bba0483a33",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d1b76d21-23ba-4206-8ddc-cfed0afe6dc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "91d2f481-8df2-4a80-aba8-081d14dd59b1",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc457f03-4cee-47aa-9ffc-8bdd99041021",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c59f24b-09e5-4219-81e4-7abd518f831b",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c24823-9485-4466-8cef-78e93b2395cf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}